--- a/components/app/style.scss
+++ b/components/app/style.scss
@@ -3,26 +3,15 @@
 .#{$prefix}app {
   display: flex;
 
-  &.app-light {
-    background: var(--color-background-one-light);
-    color: var(--color-text-primary-light);
-    .background-one{
-      background: var(--color-background-one-light);
-    }
-    .background-two{
-      background: var(--color-background-two-light);
-    }
+  background: var(--color-background-one);
+  color: var(--color-text-primary);
+
+  .background-one {
+    background: var(--color-background-one);
   }
 
-  &.app-dark {
-    background: var(--color-background-one-dark);
-    color: var(--color-text-primary-dark);
-    .background-one{
-      background: var(--color-background-one-dark);
-    }
-    .background-two{
-      background: var(--color-background-two-dark);
-    }
+  .background-two {
+    background: var(--color-background-two);
   }
 
 
