--- a/components/form/scss/switch.scss
+++ b/components/form/scss/switch.scss
@@ -23,12 +23,7 @@
     width: 100%;
     height: 100%;
     border-radius: 10px;
-    @include light() {
-      background-color: var(--color-disabled-light);
-    }
-    @include dark() {
-      background-color: var(--color-disabled-dark);
-    }
+    background-color: var(--color-disabled);
   }
 
   .switch-dot {
