--- a/components/icon/style.scss
+++ b/components/icon/style.scss
@@ -7,12 +7,8 @@
   &.icon-disabled {
     pointer-events: none;
     opacity: .6;
-    @include light() {
-      color: var(--color-disabled-light) !important
-    }
-    @include dark() {
-      color: var(--color-disabled-dark) !important
-    }
+    color: var(--color-disabled) !important
+
   }
 
   @include rtl() {
