fix some bugs add global props to inputs add r-time-picker-range component add disableTime function to r-time-picker component

--- a/style/app.scss
+++ b/style/app.scss
@@ -81,7 +81,7 @@ $color-text: var(--color-two-text);
 
 }
 
-.router-link-exact-active {
+.router-link-exact-active, a:hover {
   color: var(--color-link)
 }
 
