--- a/components/chip/style.scss
+++ b/components/chip/style.scss
@@ -47,7 +47,7 @@ $icon-sizes: (
   display: inline-flex;
   line-height: 20px;
   outline: none;
-  padding: 0;
+  padding: 0 12px;
   position: relative;
   text-decoration: none;
   transition-duration: $chip-transition-duration;
