add cropper component add cropper to r-file-input fix some bugs

--- a/components/bar/scss/toolbar.scss
+++ b/components/bar/scss/toolbar.scss
@@ -81,7 +81,7 @@
   .toolbar-items {
     display: flex;
     height: inherit;
-    align-items: flex-end;
+    align-items: center;
   }
 
   .menu-title {
