--- a/style/variables/utilities.scss
+++ b/style/variables/utilities.scss
@@ -100,6 +100,7 @@ $utilities: map-merge(
                                         center: center,
                                         space-between: space-between,
                                         space-around: space-around,
+                                        space-evenly: space-evenly,
                                 )
                         ),
                         "align-items": (
