--- a/style/variables/base.scss
+++ b/style/variables/base.scss
@@ -17,11 +17,11 @@ $negative-spacers: ();
 
 $borders: (
         'none': 0,
-        'xs': 2px,
-        'sm': 5px,
-        'md': 7px,
-        'lg': 12px,
-        'xl': 19px,
+        'xs': .125rem,
+        'sm': .25rem,
+        'md': .5rem,
+        'lg': 1rem,
+        'xl': 1.5rem,
         'pill': 9999px,
         'circle': 50%
 ) !default;
@@ -30,27 +30,47 @@ $cursor:('pointer','auto','grab','grabbing')!default;
 
 $widths: (
         'full': 100%,
+        '95': 95%,
         '90': 90%,
+        '85': 85%,
         '80': 80%,
+        '75': 75%,
         '70': 70%,
+        '65': 65%,
         '60': 60%,
+        '55': 55%,
         '50': 50%,
+        '45': 45%,
         '40': 40%,
+        '35': 35%,
         '30': 30%,
+        '25': 25%,
         '20': 20%,
-        '10': 10%
+        '15': 15%,
+        '10': 10%,
+        '5': 5%
 ) !default;
 $heights: (
         'full': 100%,
+        '95': 95%,
         '90': 90%,
+        '85': 85%,
         '80': 80%,
+        '75': 75%,
         '70': 70%,
+        '65': 65%,
         '60': 60%,
+        '55': 55%,
         '50': 50%,
+        '45': 45%,
         '40': 40%,
+        '35': 35%,
         '30': 30%,
+        '25': 25%,
         '20': 20%,
-        '10': 10%
+        '15': 15%,
+        '10': 10%,
+        '5': 5%
 ) !default;
 
 $grid-breakpoints: (
@@ -239,7 +259,7 @@ $toolbar-content-padding-x: 16px !default;
 $toolbar-height: 80px !default;
 
 //modal
-$border-modal: 7px !default;
+$border-modal: map-get($borders, 'md') !default;
 
 //bottom navigation
 $bottom-nav-btn-min-width: 56px !default;
