--- a/directive/title/style.scss
+++ b/directive/title/style.scss
@@ -1,6 +1,6 @@
 @import "../../style/include";
 
-##{$prefix}title {
+#r-directive-title {
   transition: all .2s ease-in-out;
   padding: 4px 8px;
   white-space: nowrap;
