--- a/components/modal/style.scss
+++ b/components/modal/style.scss
@@ -4,19 +4,21 @@
   align-items: center;
   flex-direction: column;
   display: flex;
-  left: 0;
-  width: 100vw;
+  left: -50%;
+  top: -50%;
+  width: 200%;
+  height: 200%;
   justify-content: center;
   position: fixed;
   z-index: map_get($z-index, 'important');
   outline: none;
-  bottom: 0;
 
 
-    &:not(.modal-no-overlay) {
-      background-color: var(--color-overlay);
-    }
-    .modal-content {
+  &:not(.modal-no-overlay) {
+    background-color: var(--color-overlay);
+  }
+
+  .modal-content {
       border: 1px solid var(--color-border);
     }
 
@@ -43,8 +45,8 @@
 
   .modal-container {
     width: 95%;
-    max-width: 95%;
-    max-height: 90%;
+    max-width: 100vw;
+    max-height: 90vh;
     z-index: map_get($z-index, 'important');
   }
 
@@ -59,7 +61,7 @@
   @include media-breakpoint-up('md') {
     .modal-container {
       width: 75%;
-      max-width: 75%;
+      max-width: 75vw;
     }
   }
 
@@ -73,7 +75,7 @@
 
   .modal-full-width {
     width: 100%;
-    max-width: 100% !important;
+    max-width: 100vw !important;
   }
 
   .modal-full-height {
