--- a/components/modal/style.scss
+++ b/components/modal/style.scss
@@ -1,30 +1,33 @@
 @import "../../style/include";
 
+.#{$prefix}modal-overlay {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: map_get($z-index, 'important');
+  background-color: var(--color-overlay);
+  backdrop-filter: blur(3px) grayscale(30%);
+}
+
 .#{$prefix}modal {
   align-items: center;
   flex-direction: column;
   display: flex;
-  left: -50%;
-  top: -50%;
-  width: 200%;
-  height: 200%;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
   justify-content: center;
   position: fixed;
   z-index: map_get($z-index, 'important');
   outline: none;
 
-
-  &:not(.modal-no-overlay) {
-    background-color: var(--color-overlay);
-  }
-
   .modal-content {
-      border: 1px solid var(--color-border);
-    }
-
-  &:not(.modal-no-overlay) {
-    backdrop-filter: blur(3px) grayscale(30%);
+    border: 1px solid var(--color-border);
   }
+
 
   .modal-btn {
     width: 100%;
