--- a/style/transitions.scss
+++ b/style/transitions.scss
@@ -145,58 +145,6 @@
   }
 }
 
-.slide-start-full {
-  &-enter-active {
-    transition: all .3s ease-in-out;
-  }
-
-  &-leave-active {
-    transition: all .3s ease-in-out;
-  }
-
-  &-enter-from, &-leave-to {
-    @include rtl() {
-      transform: translateX(-100%);
-    }
-    @include ltr() {
-      transform: translateX(100%);
-    }
-
-    opacity: 0;
-  }
-
-  &-move {
-    transition: transform .7s ease-in-out;
-  }
-}
-
-.slide-end-full {
-  &-enter-active {
-    max-width: 100%;
-    transition: all .3s ease-in-out;
-  }
-
-  &-leave-active {
-    max-width: 100%;
-    transition: all .3s ease-in-out;
-  }
-
-  &-enter-from, &-leave-to {
-    @include rtl() {
-      transform: translateX(100%);
-    }
-    @include ltr() {
-      transform: translateX(-100%);
-    }
-
-    opacity: 0;
-  }
-
-  &-move {
-    transition: transform .7s ease-in-out;
-  }
-}
-
 .slide-start {
   &-enter-active {
     transition: all .3s ease-in-out;
@@ -208,10 +156,10 @@
 
   &-enter-from, &-leave-to {
     @include rtl() {
-      transform: translateX(-30px);
+      transform: translateX(-60%);
     }
     @include ltr() {
-      transform: translateX(30px);
+      transform: translateX(60%);
     }
 
     opacity: 0;
@@ -235,10 +183,10 @@
 
   &-enter-from, &-leave-to {
     @include rtl() {
-      transform: translateX(30px);
+      transform: translateX(60%);
     }
     @include ltr() {
-      transform: translateX(-30px);
+      transform: translateX(-60%);
     }
 
     opacity: 0;
@@ -259,7 +207,7 @@
   }
 
   &-enter-from, &-leave-to {
-    transform: translateY(20px);
+    transform: translateY(60%);
     opacity: 0;
   }
 
@@ -278,7 +226,7 @@
   }
 
   &-enter-from, &-leave-to {
-    transform: translateY(-20px);
+    transform: translateY(-60%);
     opacity: 0;
   }
 
@@ -303,63 +251,5 @@
 
   &-move {
     transition: transform .7s ease;
-  }
-}
-
-
-.page-slide-right {
-  &-enter-active, &-leave-active {
-    min-width: 100vw;
-    max-width: 100vw;
-    transition: all .5s ease-in-out;
-    z-index: 10;
-  }
-
-  &-enter-to {
-    position: absolute;
-    right: 0;
-  }
-
-  &-enter-from {
-    position: absolute;
-    right: -100%;
-  }
-
-  &-leave-to {
-    position: absolute;
-    left: -100%;
-  }
-
-  &-leave-from {
-    position: absolute;
-    left: 0;
-  }
-}
-.page-slide-left {
-  &-enter-active, &-leave-active {
-    min-width: 100vw;
-    max-width: 100vw;
-    transition: all .5s ease-in-out;
-    z-index: 10;
-  }
-
-  &-enter-to {
-    position: absolute;
-    left: 0;
-  }
-
-  &-enter-from {
-    position: absolute;
-    left: -100%;
-  }
-
-  &-leave-to {
-    position: absolute;
-    right: -100%;
-  }
-
-  &-leave-from {
-    position: absolute;
-    right: 0;
   }
 }
